apps/base/wishlist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist
  namespace: wishlist
spec:
  type: ClusterIP
  selector:
    app: wishlist
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
